# Bread

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
.github/workflows/: cmake.yml
Bread/: CMakeLists.txt
Bread/include/: AdvancedClient.hpp  AdvancedTasks.hpp  BedwarsTasks.hpp  CraftingUtils.hpp  FarmingTasks.hpp  SurvivalTasks.hpp
Bread/include/tasks/: AdvancedTasks.hpp  CraftingTasks.hpp  FarmingTasks.hpp  SkyblockTasks.hpp  StonksTasks.hpp  SurvivalTasks.hpp
Bread/src/: AdvancedClient.cpp  AdvancedTasks.cpp  BedwarsTasks.cpp  CraftingUtils.cpp  FarmingTasks.cpp  SurvivalTasks.cpp  main.cpp
Bread/src/tasks/: AdvancedTasks.cpp  BedwarsTasks.cpp  CraftingTasks.cpp  FarmingTasks.cpp  SkyblockTasks.cpp  StonksTasks.cpp  SurvivalTasks.cpp
